depuracion de codigo

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         Refresh Page</button
       ><br /><br />
 
-      <img class="w-25" id="imagen" src="" alt="" />
+      <img class="w-25" id="imagen" src="" alt="imagen de muestra" />
     </div>
     <script src="/src/app.js"></script>
   </body>
